@@ -69,7 +69,6 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DecoratorPredicateContext.cs" />
     <Compile Include="GenericArgumentFinder.cs" />
     <Compile Include="GenericDecoratorExtensions.cs" />
     <Compile Include="GenericTypeBuilder.cs" />
